Fixed link spacing

--- a/source/_patterns/02-organisms/google-translator-block/_google-translator-block.scss
+++ b/source/_patterns/02-organisms/google-translator-block/_google-translator-block.scss
@@ -96,6 +96,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    vertical-align: middle;
 
     &:before {
       display: block;
